refactor:changing processBuilder to runtimeExec